--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crwn-clothing-server",
   "version": "1.0.0",
-  "homepage": "https://bosselijah.github.io/crwn-clothing",
+  "homepage": "https://bosselijah.github.io",
   "engines": {
     "node": "12.8.1",
     "npm": "7.10.0"
