--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "crwn-clothing-server",
   "version": "1.0.0",
   "engines": {
-    "node": "12.8.1",
-    "npm": "7.10.0"
+    "node": "10.15.3",
+    "npm": "6.4.1"
   },
   "scripts": {
     "client": "cd client && yarn start",
@@ -11,34 +11,17 @@
     "build": "cd client && npm run build",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "start": "node server.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "compression": "1.7.4",
+    "cors": "2.8.5",
     "dotenv": "7.0.0",
     "express": "^4.16.4",
     "stripe": "6.28.0"
   },
   "devDependencies": {
-    "concurrently": "^6.0.2",
+    "concurrently": "^4.0.1",
     "nodemon": "^1.19.1"
-  },
-  "description": "crw-clothing",
-  "main": "server.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/BossElijah/crwn-2.git"
-  },
-  "keywords": [
-    "clothes"
-  ],
-  "author": "BossElijah",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/BossElijah/crwn-2/issues"
-  },
-  "homepage": "https://github.com/BossElijah/crwn-2#readme"
+  }
 }
