--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -16,9 +16,15 @@
       "src": "crwn-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "maskable_icon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
